--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,7 +21,8 @@ http {
         listen       8080;
         server_name  localhost;
 
-        location /amplitude {
+        location /cuz360 {
           proxy_pass https://api.cuz360.com/;
         }
     }
+}
