--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,25 +4,30 @@ error_log  logs/error.log;
 error_log  logs/error.log  notice;
 error_log  logs/error.log  info;
 
-events {
-    worker_connections  1024;
-}
+#events {
+#    worker_connections  1024;
+#}
 
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
+server {
+        listen 80;
+        listen [::]:80;
 
-    sendfile        on;
-
-    keepalive_timeout  65;
-
-    server {
-        listen       8080;
-        server_name  localhost;
-
-        location /cuz360 {
-          proxy_pass https://api.cuz360.com/;
+        server_name docs.cuz360.com;
+        
+        location ~ /.well-known/acme-challenge {
+                allow all;
+                root /var/www/html;
         }
-    }
+
+        
+        location /cuz360 {
+          #      rewrite ^ https://$host$request_uri? permanent;
+                proxy_pass https://api.cuz360.com/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+        }
 }
