--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,8 +1,8 @@
 #worker_processes  1;
 
-error_log  logs/error.log;
-error_log  logs/error.log  notice;
-error_log  logs/error.log  info;
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
 
 #events {
 #    worker_connections  1024;
@@ -13,7 +13,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name docs.cuz360.com;
+        server_name localhost;
         
         location ~ /.well-known/acme-challenge {
                 allow all;
