--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,7 +13,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name localhost;
+        server_name localhost; #your domain
         
         location ~ /.well-known/acme-challenge {
                 allow all;
