--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,7 +21,7 @@ server {
         }
 
         
-        location /cuz360 {
+        location / {
           #      rewrite ^ https://$host$request_uri? permanent;
                 proxy_pass https://api.cuz360.com/;
                 proxy_http_version 1.1;
